# genSun

./: Makefile  Makefile-ied  Makefile-lxplus  README.md  analyzeDecays.py  cardSunBatch.card  conv8.cc  countParents.py  gammaPlusX.card  genSun.cc  haddAll.sh  haddList.sh  parhadd.sh  plots.py  plots_new.py  runSolarSpectrum.sh  runSpectra.sh  runTestMorten.sh  setenv.sh  sub.sh  sub_fullrange.sh  suball.sh  subhadd.sh
geant/: .gitignore  README.md  gdbscript  makebuild.sh
geant/analyze/: compare.py  compare_radiuses.py  filestatistics.py  printsummaries.py
geant/doc/: MATERIALS.md
geant/fringe/: pythia.card  radiuses.sh
geant/run/: .gitignore  auto_current.sh  batch.sh  fulljobs.sh  lowgamma.sh  lowstable.sh  newbatch.sh  pythiatests.sh  remove.sh  report.py  run.sh  sendjob.py  sendjobs.sh  solnugeant  statusloop.sh
geant/run/evruns/: pythia.card  submit-evruns.sh
geant/run/measure/: .gitignore  analyze.py  auto_create.sh  measure.py  measurejobs.py  merge.py  pythia.card
geant/run/submissions/: lowstable.sh  pythiatests.sh
geant/src/: CMakeLists.txt  main.cc
geant/src/include/: DMEventWriter.hh  DMPhysicsList.hh  DMPrimaryGeneratorAction.hh  DMPythiaPGA.hh  DMRootHistogrammer.hh  G4ParentTrackInformationAction.hh  G4UserActionManager.hh  Geant4PGA.hh  NeutrinoHistogram.hh  NeutrinoStackingAction.hh  Nugrammer.hh  PGAInterface.hh  ParentTrackingAction.hh  StatisticsRunAction.hh  SunDetectorConstruction.hh  SunSteppingAction.hh
geant/src/scripts/: default.mac  measure.sh  pythia.card  test.sh  vis.mac
geant/src/src/: DMEventWriter.cc  DMPhysicsList.cc  DMPrimaryGeneratorAction.cc  DMPythiaPGA.cc  DMRootHistogrammer.cc  G4ParentTrackInformationAction.cc  G4UserActionManager.cc  Geant4PGA.cc  NeutrinoHistogram.cc  NeutrinoStackingAction.cc  Nugrammer.cc  ParentTrackingAction.cc  StatisticsRunAction.cc  SunDetectorConstruction.cc  SunSteppingAction.cc
geant/src/test/: dmpythia.cc  histogrammer.cc  nugrammer.cc  pythiaps.cc  root.cc
geant/util/: find.sh  run.sh  testdir.sh
genSun.xcodeproj/: project.pbxproj
genSun.xcodeproj/project.xcworkspace/xcuserdata/joosep.xcuserdatad/: UserInterfaceState.xcuserstate
genSun.xcodeproj/project.xcworkspace/xcuserdata/joosep.xcuserdatad/xcdebugger/: Expressions.xcexplist
genSun.xcodeproj/xcuserdata/joosep.xcuserdatad/xcdebugger/: Breakpoints.xcbkptlist
genSun.xcodeproj/xcuserdata/joosep.xcuserdatad/xcschemes/: genSun to tau.xcscheme  genSun to top.xcscheme  genSun.xcscheme  xcschememanagement.plist
plots/: .gitignore  plots.py
pythia8170/genSun/: Makefile  Makefile-ied  README.md  cardSunBatch.card  cardSunTest.card  genSun.cc  runSpectra.sh
pythia8170/genSun/genSun.xcodeproj/: project.pbxproj
pythia8170/genSun/genSun.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
pythia8170/genSun/genSun.xcodeproj/project.xcworkspace/xcuserdata/joosep.xcuserdatad/: UserInterfaceState.xcuserstate
pythia8170/genSun/genSun.xcodeproj/xcuserdata/joosep.xcuserdatad/xcdebugger/: Breakpoints.xcbkptlist
pythia8170/genSun/genSun.xcodeproj/xcuserdata/joosep.xcuserdatad/xcschemes/: genSun.xcscheme  xcschememanagement.plist
pythia8175/genSun/: Makefile  Makefile-ied  Makefile-wn  cardSunBatch.card  cardSunTest.card  genSun.cc  loader.C  particle.h  runSpectra.sh
pythia8176/: config.mk
pythia8176/genSun/: Makefile  Makefile-ied  cardSunBatch.card  cardSunPiMinusOff.card  cardSunPiMinusOn.card  cardSunTest.card  genSun.cc
pythia8176/src/: Pythia.cc
util/: analyzeDecays.py  conv8.cc  countParents.py  parhadd.sh  plots_new.py  plots_new_geant4.py  subhadd.sh
